<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@android:color/darker_gray"
            android:gravity="center_vertical"
            android:orientation="horizontal">
        <ImageView
                android:id="@+id/bar_title_iv_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/menu"/>

        <TextView
                android:id="@+id/bar_title_tv"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                tools:text="我的订单"
                android:textSize="18sp"
                 />
        <SearchView
                android:id="@+id/bar_title_sv"
                android:queryHint="@string/bar_title_searchkw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

        </SearchView>
    </LinearLayout>
    <LinearLayout
            android:id="@+id/bar_title_layout_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
             android:background="@android:color/darker_gray">
        <TextView
                android:id="@+id/bar_title_tv_my_order"
                android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textSize="18sp"
                    android:text="@string/bar_title_tv_my_order"/>
        <TextView
                android:id="@+id/bar_title_tv_add_order"
                android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textSize="18sp"
                  android:text="@string/bar_title_tv_add_order"/>
        <TextView
                android:id="@+id/bar_title_tv_view_cinema"
                android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textSize="18sp"
                  android:text="@string/bar_title_tv_view_cinema"/>
        <TextView
                android:id="@+id/bar_title_tv_add_cinema"
                android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textSize="18sp"
                  android:text="@string/bar_title_tv_add_cinema"/>
        <TextView
                android:id="@+id/bar_title_tv_exit"
                android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textSize="18sp"
                  android:text="@string/bar_title_tv_exit"/>
    </LinearLayout>
</LinearLayout>